left side search added

--- a/app/views/spaces/_ransack.html.erb
+++ b/app/views/spaces/_ransack.html.erb
@@ -1,7 +1,10 @@
 <%= search_form_for @q do |f| %>
 
-  <%= f.label :zipcode_eq, "Zipcode" %>
-  <%= f.search_field :zipcode_eq %>
-
-  <%= f.submit %>
+<%= f.label :zipcode_eq, "Zipcode" %>
+<%= f.search_field :zipcode_eq %>
+<div style="display:none;">
+  <%= f.search_field :size_gteq %>
+  <%= f.search_field :size_lteq %>
+</div>
+<%= f.submit %>
 <% end %>
