added twitter boot strap and added basic styling to a few pages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Sublet</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
+  <%= render 'layouts/head' %>
 <body>
 
-<p><%= notice %> </p>
-
-
-
-<%= yield %>
+  <%= render 'layouts/header' %>
+        <%#= render 'layouts/search' %>
+<br>
+  <div class="container main_content">
+    <div class="page-header" id="banner">
+      <div class="row">
+        <%= yield %>
+      </div>
+    </div>
+  </div>
 
 </body>
 </html>
