--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,10 +10,12 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require_tree .
+ *= require reset
+ *= require bootstrap
+ *= require reset
  *= require_self
+ *= require twitter/bootstrap
+ *= require custom
+
  */
 
-header {
-  margin-bottom:30px;
-}
