--- a/app/views/spaces/index.html.slim
+++ b/app/views/spaces/index.html.slim
@@ -1,23 +1,21 @@
 = render "ransack"
-.sidebar
-  = render 'sidebar'
 
-table
-  thead
-    tr
-      th
-      th Title
+.row.well
+  .col-lg-2.sidebar
+    = render 'sidebar'
 
-  tbody
-    - @spaces.each do |space|
-      tr
-        td = image_tag(space.images.first.file.url(:thumb)) unless space.images_count ==0
-        td = link_to space.title, space
+  .col-lg-7
+    table.spaces_table
+      - @spaces.each do |space|
+        tr
+          td = image_tag(space.images.first.file.url(:thumb)) unless space.images_count ==0
+          td.space_link
+            p
+              = link_to space.title, space
+            p
+              = space.created_at.strftime "%Y-%m-%d"
 
-br
+    = will_paginate @spaces, renderer: BootstrapPagination::Rails
 
-= will_paginate @spaces
-
-br
-
-= link_to 'New Pace', new_space_path
+  .col-lg-3.sidebar
+    = render 'layouts/fake'
