--- a/app/views/spaces/index.html.slim
+++ b/app/views/spaces/index.html.slim
@@ -1,7 +1,3 @@
-= render "ransack"
-.sidebar
-  = render 'sidebar'
-
 table
   thead
     tr
@@ -20,4 +16,4 @@ br
 
 br
 
-= link_to 'New Pace', new_space_path
+= link_to 'New Place', new_space_path
