removed content from header to layout

--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -1,6 +1,5 @@
 = link_to "Sublet App", root_path
 = render "ransack"
-.sidebar
-  = render 'sidebar'
 
-= link_to 'New Place', new_space_path
+= link_to 'Add New Place', new_space_path
+
