--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
 <p><%= notice %> </p>
 
 <%= render 'layouts/header' %>
+<%= render 'layouts/left_sidebar' %>
+<%= render 'layouts/right_sidebar' %>
+
 <%= yield %>
 
 </body>
