added mail after creation of contact user

--- a/app/views/user_mailer/tenant_response_received.html.slim
+++ b/app/views/user_mailer/tenant_response_received.html.slim
@@ -1,2 +1,8 @@
-p.strong
-  ' Someone is interested in your propery:
+p
+  = "Hey #{@owner_email}"
+
+p
+  = "#{@tenant_email} is interested in your propery"
+
+p
+  = @tenant_response.description
