add space requests option added

--- a/app/views/space_requests/_form.html.slim
+++ b/app/views/space_requests/_form.html.slim
@@ -1,4 +1,4 @@
-= simple_form_for @space_request do |f|
+= simple_form_for @space_request, :remote => true do |f|
   = f.error_notification
 
   = f.input :size
