added max and min in request space

--- a/app/views/space_requests/_form.html.slim
+++ b/app/views/space_requests/_form.html.slim
@@ -1,7 +1,8 @@
 = simple_form_for @space_request, :remote => true do |f|
   = f.error_notification
 
-  = f.input :size
+  = f.input :max_size
+  = f.input :min_size
   = f.input :city
   = f.input :budget
   = f.input :email
