--- a/app/views/layouts/_right_sidebar.html.slim
+++ b/app/views/layouts/_right_sidebar.html.slim
@@ -1,2 +1,9 @@
 p
   = link_to 'Request New Space', new_space_request_path, :remote => true
+
+table
+  - @requested_spaces.each do |space_request|
+    tr
+      td.requestspace_link
+        p
+          = link_to link_text_for_space_requtes(space_request), space_request
