added show page for space requests

--- a/app/views/layouts/_right_sidebar.html.slim
+++ b/app/views/layouts/_right_sidebar.html.slim
@@ -1,5 +1,4 @@
-p
-  = link_to 'Request New Space', new_space_request_path, :remote => true
+p  Looking for ....
 
 table
   - @requested_spaces.each do |space_request|
@@ -7,3 +6,6 @@ table
       td.requestspace_link
         p
           = link_to link_text_for_space_requtes(space_request), space_request
+
+p
+  = link_to 'Request New Space', new_space_request_path, :remote => true
