don't send email if fake space request

--- a/app/views/spaces/_form.html.slim
+++ b/app/views/spaces/_form.html.slim
@@ -11,4 +11,4 @@
     = render 'image_fields', f: builder
   = link_to_add_fields "Add Image", f, :images
 
-  = f.button :submit
+  = f.button :submit, "List Space"
