--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,18 +1,57 @@
 <p><%= notice %> </p>
 
-<div class="navbar navbar-default navbar-fixed-top">
-  <div class="container">
 
-    <div class="navbar-header">
-      <a href="/" class="navbar-brand">Sublet App</a>
+<div class="navbar navbar-default navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Sublet App</a>
+        </div>
+        <div class="navbar-collapse collapse">
+
+          <ul class="nav navbar-nav navbar-right">
+          <%= link_to '+ Add Your Space', new_space_path, class: 'btn btn-primary' %>
+
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
     </div>
 
 
-    <ul class="nav navbar-nav navbar-right">
-      <li>
-      <%= link_to '+ Add Your Space', new_space_path, class: 'btn btn-primary header_add_space' %>
-      </li>
-    </ul>
 
+
+
+
+
+
+
+
+
+
+
+<!--
+
+<div class="navbar navbar-fixed-top">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <a href="/" class="navbar-brand">Sublet App</a>
+      </div>
+      <div class="col-md-4 text-center">
+        <%#= render 'layouts/ransack' %>
+      </div>
+      <div class="col-md-4">
+        <ul class="nav navbar-nav navbar-right">
+          <li>
+            <%#= link_to '+ Add Your Space', new_space_path, class: 'btn btn-primary header_add_space' %>
+          </li>
+        </ul>
+      </div>
+    </div>
   </div>
-</div>
+</div> -->
