--- a/app/views/layouts/_ransack.html.erb
+++ b/app/views/layouts/_ransack.html.erb
@@ -1,4 +1,4 @@
-<div class="row well" style='text-align:center'>
+<div class="row" style='text-align:center'>
   <%= search_form_for @q do |f| %>
   <%= f.label :zipcode_eq, "Zipcode" %>
   <%= f.search_field :zipcode_eq %>
