--- a/app/views/spaces/_form.html.slim
+++ b/app/views/spaces/_form.html.slim
@@ -1,14 +1,30 @@
-= simple_form_for @space , html: {multipart: true}  do |f|
-  = f.input :title
-  = f.input :price
-  = f.input :size
-  = f.input :description
-  = f.input :address
-  = f.input :zipcode
-  = f.input :email
+= form_for @space , html: {multipart: true}  do |f|
 
-  = f.fields_for :images do |builder|
-    = render 'image_fields', f: builder
-  = link_to_add_fields "Add Image", f, :images
+  div.form-group
+    = f.label :title
+    = f.text_field :title,  class: 'form-control'
+  div.form-group
+    = f.label :prize
+    = f.text_field :price, class: 'form-control'
+  div.form-group
+    = f.label :size
+    = f.text_field :size, class: 'form-control'
+  div.form-group
+    = f.label :description
+    = f.text_field :description, class: 'form-control'
+  div.form-group
+    = f.label :address
+    = f.text_field :address, class: 'form-control'
+  div.form-group
+    = f.label :zipcode
+    = f.text_field :zipcode, class: 'form-control'
+  div.form-group
+    = f.label :email
+    = f.text_field :email, class: 'form-control'
+  div.form-group
+    = f.submit  "List Space", class: 'btn btn-success'
 
-  = f.button :submit, "List Space"
+/!
+  #f.fields_for :images do |builder|
+  #render 'image_fields', f: builder
+  #link_to_add_fields "Add Image", f, :images
