fixed icon link

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,7 +10,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Sublet App</a>
+          <%= link_to "Sublet App", root_path, :class => 'navbar-brand' %>
         </div>
         <div class="navbar-collapse collapse">
 
