fixed typo and change tenant responses to uuid

--- a/app/views/spaces/_form.html.slim
+++ b/app/views/spaces/_form.html.slim
@@ -4,7 +4,7 @@
     = f.label :title
     = f.text_field :title,  class: 'form-control'
   div.form-group
-    = f.label :prize
+    = f.label :price
     = f.text_field :price, class: 'form-control'
   div.form-group
     = f.label :size
