--- a/app/views/user_mailer/upload_success.html.slim
+++ b/app/views/user_mailer/upload_success.html.slim
@@ -1,3 +1,7 @@
+p Hey #{@email.split('@').first},
+
+p Thanks for adding your space.
+
 p.strong
   ' Save this email! You'll need it to remove your listing:
 
