added space details in tenant response

--- a/app/views/user_mailer/upload_success.html.slim
+++ b/app/views/user_mailer/upload_success.html.slim
@@ -12,4 +12,4 @@ p
 p
   ' To remove your listing click here:
 
-= remove_space_url(id: @space.removal_token)
+p = remove_space_url(id: @space.removal_token)
