--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,8 +15,7 @@
         <div class="navbar-collapse collapse">
 
           <ul class="nav navbar-nav navbar-right">
-          <%= link_to '+ Add Your Space', new_space_path, class: 'btn btn-primary' %>
-
+          <%= link_to '+ Add Your Space', new_space_path, class: 'btn btn-primary', style: "margin-top: 10px; " %>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
