--- a/app/views/spaces/_form.html.slim
+++ b/app/views/spaces/_form.html.slim
@@ -1,4 +1,4 @@
-= form_for @space , html: {multipart: true}  do |f|
+= form_for @space , html: { multipart: true }  do |f|
 
   div.form-group
     = f.label :title
@@ -21,10 +21,12 @@
   div.form-group
     = f.label :email
     = f.text_field :email, class: 'form-control'
+
+  fieldset
+  = f.fields_for :images do |builder|
+    = render 'image_fields', f: builder
+
+  = link_to_add_fields "Add Image", f, :images
+
   div.form-group
     = f.submit  "List Space", class: 'btn btn-success'
-
-/!
-  #f.fields_for :images do |builder|
-  #render 'image_fields', f: builder
-  #link_to_add_fields "Add Image", f, :images
