--- a/app/views/spaces/new.html.slim
+++ b/app/views/spaces/new.html.slim
@@ -1,4 +1,4 @@
-h1 New space
+h4 style="text-align:center;" List your space for free. We'll event put you in touch if someone requests something similiar
 
 = render 'form'
 
