--- a/app/views/space_requests/new.html.slim
+++ b/app/views/space_requests/new.html.slim
@@ -1,5 +1,6 @@
-h1 New space_request
+h2 style="text-align:center;" Request a Space
 
-== render 'form'
+h4 style="text-align:center;"
+  ' We'll match you with a listing or email you when one becomes available
 
-= link_to 'Back', space_requests_path
+= render 'form'
