--- a/app/views/space_requests/new.js.erb
+++ b/app/views/space_requests/new.js.erb
@@ -1,2 +1,5 @@
-$('#modal').remove();
-$('body').append("<%=j render('modal') %>");
+<% if @space_request.errors.count == 0 %>
+
+<% else %>
+
+<% end %>
