--- a/app/views/spaces/_form.html.slim
+++ b/app/views/spaces/_form.html.slim
@@ -10,13 +10,13 @@
 
   div.form-group.col-md-6
     = f.label :title
-    = f.text_field :title,  class: 'form-control', placeholder: "Title"
+    = f.text_field :title,  class: 'form-control', placeholder: "Title", :required => true
   div.form-group.col-md-3
     = f.label :price
-    = f.text_field :price, class: 'form-control', placeholder: "Price"
+    = f.text_field :price, class: 'form-control', placeholder: "Price", :required => true
   div.form-group.col-md-3
     = f.label :size
-    = f.text_field :size, class: 'form-control', placeholder: "Size"
+    = f.text_field :size, class: 'form-control', placeholder: "Size", :required => true
   div.form-group
     = f.label :description
     = f.text_area :description, size: '40x2',  class: 'form-control', placeholder: "Description"
@@ -25,10 +25,10 @@
     = f.text_field :address, class: 'form-control', placeholder: "Address"
   div.form-group.col-md-6
     = f.label :zipcode
-    = f.text_field :zipcode, class: 'form-control', placeholder: "Zipcode"
+    = f.text_field :zipcode, class: 'form-control', placeholder: "Zipcode", :required => true
   div.form-group
     = f.label :email
-    = f.text_field :email, class: 'form-control', placeholder: "Email"
+    = f.text_field :email, class: 'form-control', placeholder: "Email", :required => true
 
   fieldset
   = f.fields_for :images do |builder|
