--- a/app/views/layouts/_ransack.html.erb
+++ b/app/views/layouts/_ransack.html.erb
@@ -1,11 +1,10 @@
 <div class="row well" style='text-align:center'>
   <%= search_form_for @q do |f| %>
-  <%= f.label :zipcode_eq, "Zipcode" %>
-  <%= f.search_field :zipcode_eq %>
+  <%= f.search_field :zipcode_eq, placeholder: "Enter Zipcode" %>
   <div style="display:none;">
     <%= f.search_field :size_gteq %>
     <%= f.search_field :size_lteq %>
   </div>
-  <%= f.submit %>
+  <%= f.submit "Search", style: "display:none;" %>
   <% end %>
 </div>
