--- a/app/views/spaces/new.html.slim
+++ b/app/views/spaces/new.html.slim
@@ -1,6 +1,7 @@
-h4 style="text-align:center;"
-  'List your space for free. We'll event put you in touch if someone requests something similiar
+div style= "width:720px; margin-left:175px;"
+  h3 style="text-align:center;"
+    'List your space for free. We'll event put you in touch if someone requests something similiar
 
-= render 'form'
+  = render 'form'
 
-= link_to 'Back', spaces_path
+  = link_to 'Back', spaces_path, style: "text-align:left; margin-left: 15px;"
