--- a/app/views/spaces/new.html.slim
+++ b/app/views/spaces/new.html.slim
@@ -1,7 +1,7 @@
 div style= "width:720px; margin-left:175px;"
-  h3 style="text-align:center;"
+  h3 style="text-align:center; margin-left:10px; margin-right:10px;"
     'List your space for free. We'll event put you in touch if someone requests something similiar
-
-  = render 'form'
+  div style="margin-top:50px;"
+    = render 'form'
 
   = link_to 'Back', spaces_path, style: "text-align:left; margin-left: 15px;"
