--- a/app/views/spaces/remove.html.slim
+++ b/app/views/spaces/remove.html.slim
@@ -5,7 +5,7 @@
     = render 'layouts/left_sidebar'
 
   .col-lg-8.show_space
-    = link_to 'Remove this Listing?', space_path(@space), style:"padding:10px; color:white; background-color:red;margin-top:10px;", method: "delete"
+    = link_to 'Remove this Listing?', space_path(@space.removal_token), style:"padding:10px; color:white; background-color:red;margin-top:10px;", method: "delete"
     h2 style="margin-top:50px;"
       = "#{@space.title} - Rs.#{@space.price}"
     h3
@@ -13,7 +13,6 @@
     br
     h4.description
       = @space.description
-    = link_to 'CONTACT OWNER', new_space_tenant_response_path(@space), :remote => true, class: 'contact_owner btn btn-primary'
 
     = render 'spaces/images', space: @space
 
