--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
       <div class="row">
         <% flash.each do |name, msg| %>
         <div class="alert alert-<%= name.to_s == "notice" ? "success" : "danger" %>" role="alert" >
+          <a class ="close" data-dismiss="alert">x</a>
           <%= msg %>
         </div>
         <% end %>
