--- a/app/views/spaces/_form.html.slim
+++ b/app/views/spaces/_form.html.slim
@@ -13,22 +13,22 @@
     = f.text_field :title,  class: 'form-control', placeholder: "Title", :required => true
   div.form-group.col-md-3
     = f.label :price
-    = f.text_field :price, class: 'form-control', placeholder: "Price", :required => true
+    = f.text_field :price, class: 'form-control', placeholder: "$/m", :required => true
   div.form-group.col-md-3
     = f.label :size
-    = f.text_field :size, class: 'form-control', placeholder: "Size", :required => true
+    = f.text_field :size, class: 'form-control', placeholder: "SQFT", :required => true
   div.form-group style="margin-left: 15px; margin-right: 15px; "
     = f.label :description
-    = f.text_area :description, size: '40x2',  class: 'form-control', placeholder: "Description"
+    = f.text_area :description, size: '40x2',  class: 'form-control', placeholder: "Description(optional)"
   div.form-group.col-md-6
     = f.label :address
-    = f.text_field :address, class: 'form-control', placeholder: "Address"
+    = f.text_field :address, class: 'form-control', placeholder: "Property Address(optional)"
   div.form-group.col-md-6
     = f.label :zipcode
-    = f.text_field :zipcode, class: 'form-control', placeholder: "Zipcode", :required => true
+    = f.text_field :zipcode, class: 'form-control', placeholder: "Zip code", :required => true
   div.form-group style="margin-left: 15px; margin-right: 15px; "
     = f.label :email
-    = f.text_field :email, class: 'form-control', placeholder: "Email", :required => true
+    = f.text_field :email, class: 'form-control', placeholder: "Email Address", :required => true
 
   fieldset
   = f.fields_for :images do |builder|
