added option to get spaces according to price

--- a/app/views/layouts/_left_sidebar.html.erb
+++ b/app/views/layouts/_left_sidebar.html.erb
@@ -20,3 +20,30 @@
   <%= f.submit "#{item.first}-#{item.last} sqft" %>
   <% end %>
 <% end %>
+
+
+<br>
+<h4>Price</h4>
+
+<%= search_form_for @q do |f| %>
+  <div style="display:none;">
+    <%= f.search_field :price_lteq, value: '500' %>
+  </div>
+  <%= f.submit "low" %>
+<% end %>
+
+<%= search_form_for @q do |f| %>
+  <div style="display:none;">
+    <%= f.search_field :price_gteq, value: 500 %>
+    <%= f.search_field :price_lteq, value: 1500 %>
+  </div>
+  <%= f.submit "medium" %>
+<% end %>
+
+<%= search_form_for @q do |f| %>
+  <div style="display:none;">
+    <%= f.search_field :price_gteq, value: 1500 %>
+  </div>
+  <%= f.submit "high" %>
+<% end %>
+
