--- a/app/views/spaces/show.html.slim
+++ b/app/views/spaces/show.html.slim
@@ -7,9 +7,9 @@
   .col-lg-8.show_space
     = link_to '< BACK TO RESULTS', spaces_path, style: "float: left;"
     h2 style="margin-top:50px;"
-      = "#{@space.title} - Rs.#{@space.price}"
+      = "#{@space.title} - #{number_to_currency(@space.price)}"
     h3
-      = "#{@space.address} - Rs.#{@space.zipcode}"
+      = "#{@space.address}, #{@space.zipcode}"
     br
     h4.description
       = @space.description
