minor tweaks with onwer

--- a/app/views/space_requests/_form.html.slim
+++ b/app/views/space_requests/_form.html.slim
@@ -21,7 +21,7 @@
     = f.text_field :budget,  class: 'form-control', placeholder: "Budget", :required => true
   div.form-group.col-md-6
     = f.label :email
-    = f.text_field :email, class: 'form-control', placeholder: "Email", :required => true
+    = f.email_field :email, class: 'form-control', placeholder: "Email", :required => true
 
   div.form-group  style="margin-left: 15px; margin-top:30px;"
     = f.submit  "Request Space", class: 'btn btn-success'
