--- a/app/views/tenant_responses/_form.html.slim
+++ b/app/views/tenant_responses/_form.html.slim
@@ -1,7 +1,16 @@
-= simple_form_for [@space, @tenant_response], :remote => true  do |f|
-  = f.error_notification
+= form_for [@space, @tenant_response] do |f|
+  - if @tenant_response.errors.any?
+    div id="error_explanation"
+      h2
+        ' Please fix the following errors:
+      ul
+      - @tenant_response.errors.full_messages.each do |message|
+        li = message
 
-  = f.input :email
-  = f.input :description
+  div.form-group
+    = f.email_field :email,  class: 'form-control', placeholder: "Email", :required => true
+  div.form-group
+    = f.text_area :description, size: '40x2',  class: 'form-control', placeholder: "Description(optional)", :required => true
 
-  = f.button :submit
+  div.form-group
+    = f.submit  "Send", class: 'btn btn-success'
