--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,3 @@
-<p><%= notice %> </p>
-
-
 <div class="navbar navbar-default navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
@@ -15,7 +12,9 @@
     <div class="navbar-collapse collapse">
 
       <ul class="nav navbar-nav navbar-right">
-        <%= link_to '+ Add Your Space', new_space_path, class: 'btn btn-primary', style: "margin-top: 10px; " %>
+      <button class="btn btn-primary" data-toggle="modal" data-target="#requestASpace" style="margin-top: 10px; ">
+        + Add Your Space
+      </button>
       </ul>
       </div>
   </div>
