--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,7 +12,7 @@
     <div class="navbar-collapse collapse">
 
       <ul class="nav navbar-nav navbar-right">
-      <button class="btn btn-primary" data-toggle="modal" data-target="#requestASpace" style="margin-top: 10px; ">
+      <button class="btn btn-primary" data-toggle="modal" data-target="#postANewSpace" style="margin-top: 10px; ">
         + Add Your Space
       </button>
       </ul>
