--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,5 +18,6 @@
     </div>
   </div>
 <%= render "layouts/modal_for_request_for_space" %>
+<%= render "layouts/modal_for_post_a_space" %>
 </body>
 </html>
