removed labels and added bold to upload email

--- a/app/views/user_mailer/upload_success.html.slim
+++ b/app/views/user_mailer/upload_success.html.slim
@@ -3,7 +3,7 @@ p Hey #{@email.email_to_name},
 p Thanks for adding your space.
 
 p.strong
-  ' Save this email! You'll need it to remove your listing:
+  b Save this email! You'll need it to remove your listing:
 
 p
   ' Your listing has been added! You can access it here
