--- a/app/views/layouts/_right_sidebar.html.slim
+++ b/app/views/layouts/_right_sidebar.html.slim
@@ -8,5 +8,6 @@ table
           = link_to link_text_for_space_requtes(space_request), space_request
         p
           = time_ago_in_words(space_request.created_at) + " ago"
-p
-  = link_to '+ Request New Space', new_space_request_path, "data-toggle" => "modal", "data-target" => "#requestASpace"
+
+button class="btn btn-link" data-toggle="modal" data-target="#requestASpace" style="margin-top: 10px;"
+  '+ Request New Space
