--- a/app/views/spaces/_form.html.slim
+++ b/app/views/spaces/_form.html.slim
@@ -25,7 +25,7 @@
 
   fieldset
   = f.fields_for :images do |builder|
-    = render 'image_fields', f: builder
+    = render 'spaces/image_fields', f: builder
 
   div style="margin-left: 15px;"
     = link_to_add_fields "Add Image", f, :images
