--- a/app/views/tenant_responses/_form.html.slim
+++ b/app/views/tenant_responses/_form.html.slim
@@ -9,10 +9,10 @@
 
   div.form-group style="margin-left: 15px; margin-right: 15px; "
     = f.label :description
-    = f.text_area :description, size: '40x2',  class: 'form-control', placeholder: "Description(optional)"
+    = f.text_area :description, size: '40x2',  class: 'form-control', placeholder: "Description", :required => true
   div.form-group style="margin-left: 15px; margin-right: 15px; "
     = f.label :email
-    = f.text_field :email, class: 'form-control', placeholder: "Email", :required => true
+    = f.email_field :email, class: 'form-control', placeholder: "Email", :required => true
 
   div.form-group  style="margin-left: 15px; margin-top:30px;"
 
