removed labels from the forms

--- a/app/views/space_requests/_form.html.slim
+++ b/app/views/space_requests/_form.html.slim
@@ -8,19 +8,14 @@
         li = message
 
   div.form-group.col-md-3
-    = f.label :max_size
     = f.text_field :max_size,  class: 'form-control', placeholder: "Max Size", :required => true
   div.form-group.col-md-3
-    = f.label :min_size
     = f.text_field :min_size, class: 'form-control', placeholder: "Min Size", :required => true
   div.form-group.col-md-6
-    = f.label :city
     = f.text_field :city, class: 'form-control', placeholder: "City", :required => true
   div.form-group.col-md-6
-    = f.label :budget
-    = f.text_field :budget,  class: 'form-control', placeholder: "Budget", :required => true
+    = f.text_field :budget,  class: 'form-control', placeholder: "Budget"
   div.form-group.col-md-6
-    = f.label :email
     = f.email_field :email, class: 'form-control', placeholder: "Email", :required => true
 
   div.form-group  style="margin-left: 15px; margin-top:30px;"
