--- a/app/views/space_requests/show.html.slim
+++ b/app/views/space_requests/show.html.slim
@@ -9,7 +9,7 @@
 
     h2 Space Required @#{@space_request.city}
 
-    h3 Size: #{@space_request.min_size} To #{@space_request.max_size}
+    h3 Size: #{@space_request.size} SQFT
 
     - if @space_request.budget
 
