--- a/app/views/user_mailer/send_email_new_space_request.html.slim
+++ b/app/views/user_mailer/send_email_new_space_request.html.slim
@@ -4,7 +4,7 @@ p  = "A new space request from #{@space_requester_email}"
 
 p Space Required @#{@space_request.city}
 
-p Size: #{@space_request.min_size} To #{@space_request.max_size}
+p Size: #{@space_request.size} SQFT
 
 - if @space_request.budget
 
