--- a/app/views/space_requests/show.html.slim
+++ b/app/views/space_requests/show.html.slim
@@ -13,7 +13,7 @@
 
     - if @space_request.budget
 
-        h3 Budget: #{number_to_currency @space_request.budget}
+        h3 Budget: #{@space_request.budget_type}
 
   .col-lg-2.sidebar
     = render 'layouts/right_sidebar'
