--- a/app/views/user_mailer/send_email_new_space_request.html.slim
+++ b/app/views/user_mailer/send_email_new_space_request.html.slim
@@ -8,4 +8,4 @@ p Size: #{@space_request.size} SQFT
 
 - if @space_request.budget
 
-    p Budget: #{number_to_currency @space_request.budget}
+    p Budget: #{@space_request.budget_type}
