added place holder for budget and improved styling of request a space

--- a/app/views/layouts/_modal_for_request_for_space.html.erb
+++ b/app/views/layouts/_modal_for_request_for_space.html.erb
@@ -3,7 +3,8 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-        <h4 class="modal-title" id="myModalLabel">Request a Space</h4>
+        <h4 class="modal-title" id="myModalLabel" style="text-align:center">Request a Space</h4>
+        <p style="text-align:center;">We'll match you with a listing or email you when one becomes available</p>
       </div>
       <div class="modal-body">
           <% @space_request = SpaceRequest.new  %>
