--- a/app/views/space_requests/_form.html.slim
+++ b/app/views/space_requests/_form.html.slim
@@ -12,7 +12,7 @@
   div.form-group.col-md-9
     = f.text_field :city, class: 'form-control', placeholder: "City", :required => true
   div.form-group.col-md-12
-    = select(:space_request,:budget, [['Low', 1], ['Medium', 2],['High', 3]])
+    = select(:space_request,:budget, [['Low', 1], ['Medium', 2],['High', 3]], :prompt => "Budget")
   div.form-group.col-md-12
     = f.email_field :email, class: 'form-control', placeholder: "Email", :required => true
 
