--- a/app/views/layouts/_modal_for_post_a_space.html.erb
+++ b/app/views/layouts/_modal_for_post_a_space.html.erb
@@ -3,7 +3,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-        <h4 class="modal-title" id="myModalLabel">Post a Space</h4>
+        <h4 class="modal-title" id="myModalLabel" style="text-align:center">List your space for free. We'll even put you in touch if someone requests something similiar.</h4>
       </div>
       <div class="modal-body">
           <% @space = Space.new  %>
