--- a/app/views/user_mailer/send_email_new_space_request.html.slim
+++ b/app/views/user_mailer/send_email_new_space_request.html.slim
@@ -6,6 +6,6 @@ p Space Required @#{@space_request.city}
 
 p Size: #{@space_request.size} SQFT
 
-- if @space_request.budget
+- if @space_request.budget.present?
 
     p Budget: #{@space_request.budget_type}
