--- a/app/views/layouts/_ransack.html.erb
+++ b/app/views/layouts/_ransack.html.erb
@@ -1,10 +1,10 @@
 <div class="row well" style='text-align:center'>
-  <%= search_form_for @q do |f| %>
-  <%= f.search_field :zipcode_eq, placeholder: "Enter Zipcode", class: "form-control", style: "width:250px; align:center; margin-left:500px;" %>
+  <%= search_form_for @q , class: "form-inline"  do |f| %>
+  <%= f.search_field :zipcode_eq, placeholder: "Enter Zipcode", class: "form-control" %>
   <div style="display:none;">
     <%= f.search_field :size_gteq %>
     <%= f.search_field :size_lteq %>
   </div>
-  <%= f.submit "Search", style: "display:none;" %>
+  <%= f.submit "Search", class: "btn btn-default" %>
   <% end %>
 </div>
